# zvec

./: BENCHMARK_PLAN.md  CMakeLists.txt  SPRINT_1_SPRINT_BACKLOG.md  SPRINT_1_STORIES.md  SPRINT_COMPRESSION.md  SPRINT_FEATURES.md  SPRINT_GPU_1_FAISS_GPU.md  SPRINT_GPU_2_QUANTIZATION.md  SPRINT_GPU_3_HNSW.md  SPRINT_GPU_4_APPLE_SILICON.md  SPRINT_GPU_5_DISTRIBUTED.md  SPRINT_GPU_MAC.md  benchmark_datasets.py  benchmark_python_features.py  benchmark_realistic.py  colab_test.ipynb  gpu_benchmark_full.ipynb  kaggle_benchmark.ipynb  pyproject.toml
.github/workflows/: linux_arm64_docker_ci.yml  linux_x64_docker_ci.yml  mac_arm64_ci.yml
benchmarks/: CMakeLists.txt  README.md  distance_scan_bench.cc
benchmarks/distance_matrix_openmp/: CMakeLists.txt  README.md  distance_matrix_bench.cc
docs/: COMPRESSION.md  GPU.md  METAL_CPP.md  MPS.md  PYTHON_3.14_FEATURES.md
examples/: custom_http_embedding.py
examples/python/: langchain_integration.py
python/tests/: conftest.py  test_backends.py  test_compression.py  test_compression_integration.py  test_gpu.py  test_gpu_index.py  test_schema_compression.py  test_streaming.py
python/zvec/: __init__.py  accelerate.py  compression.py  compression_integration.py  gpu.py  gpu_index.py  mps.py  streaming.py
python/zvec/backends/: BENCHMARK_README.md  README.md  RESEARCH_GPU_PIM.md  __init__.py  apple_ane.py  apple_silicon.py  benchmark.py  benchmark_ane_mps.py  benchmark_cuvs.py  cuvs.py  cuvs_cagra.py  cuvs_hnsw.py  cuvs_ivf_pq.py  detect.py  distributed.py  gpu.py  graph_reordering.py  hnsw.py  memory_coalescing.py  opq.py  pim_evaluation.py  quantization.py  search.py  unified.py
python/zvec/extension/: http_embedding_function.py
python/zvec/langchain/: __init__.py  vectorstore.py
python/zvec/model/: collection.py
python/zvec/model/schema/: collection_schema.py
src/: CMakeLists.txt
src/ailego/algorithm/: opq.h  product_quantizer.h
src/ailego/concurrent/: lockfree.h
src/ailego/cpu/: batch.h  fastscan.h  simd_distance.h
src/ailego/gpu/: gpu_buffer_loader.h  graph_ann.h  vamana.h
src/ailego/gpu/cuda/: coalesce.cu  coalesce.cuh
src/ailego/gpu/cuvs/: zvec_cuvs.h
src/ailego/gpu/metal/: CMakeLists.txt  distance.metal  zvec_metal.cc  zvec_metal.h  zvec_metal.metal
src/ailego/system/: memory_pool.h  numa.h
src/core/quantizer/rotator/: matrix_rotator.cc
src/db/common/: rocbsdb_context.cc
src/db/index/vector/: vector_storage.h
tests/: test_metal.cc
tests/core/algorithm/hnsw_sparse/: hnsw_sparse_searcher_test.cpp
tests/core/quantizer/: matrix_rotator_test.cc
tools/core/: CMakeLists.txt  distance_bench.cc
